--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@esotericsoftware/spine-pixi-v8": "^4.2.73",
     "@tanstack/react-query": "^5.28.4",
     "@types/node": "^22.13.1",
     "lucide-react": "^0.344.0",
+    "pixi.js": "^8.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
@@ -40,6 +42,6 @@
     "trailingComma": "es5",
     "tabWidth": 2,
     "semi": true,
-    "printWidth": 80
+    "printWidth": 120
   }
 }
